# pyparadigm

./: .gitignore  .noseids  LICENSE  Pipfile  nosetests.xml  pyproject.toml  readme.md  readme.rst  requirements.txt  setup.py
doc/: Makefile  make.bat  requirements.txt
doc/examples/: checkerboard.py  itech.py  results.tsv  stroop.py
doc/source/: conf.py  dialogs.rst  examples.rst  extras.rst  index.rst  surfacecomposition.rst  tutorial.rst
doc/source/examples/: checkerboard.py
pip-wheel-metadata/pyparadigm-1.0.7.dist-info/: METADATA
pyparadigm/: __init__.py  _primitives.py  dialogs.py  eventlistener.py  extras.py  misc.py  nny.py  surface_composition.py
pyparadigm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_extras.py  test_surface_composition.py
