[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pyparadigm"
author = "Felix G. Knorr"
author-email = "knorr.felix@gmx.de"
home-page = "https://github.com/KnorrFG/pyparadigm"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"]
requires = [
    "pygame (>=1.9.3)"
]
requires-python = ">=3.5"
description-file = "readme.rst"