[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyparadigm"
author = "Felix G. Knorr"
author-email = "knorr.felix@gmx.de"
home-page = "https://github.com/KnorrFG/pyparadigm"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"]
requires = [
    "pygame (>=1.9.3)"
]
requires-python = ">=3.5"
description-file = "readme.md"
